// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option go_package = "github.com/sykesm/batik/pkg/pb/tx/v1;txv1";

package tx.v1;

import "tx/v1/transaction.proto";

// SubmitTransactionAPI submits transactions for validation and commit
// processing.
//
// NOTE: This service temporary and is not intended to be long lived.
service SubmitTransactionAPI {
  // SubmitTransaction submits a transaction for validation and commit processing.
  // NOTE: This is an implementation for prototyping.
  rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionResponse);
};

// SubmitTransactionRequest contains a Transaction.
message SubmitTransactionRequest {
  Transaction transaction = 1;
}

// SubmitTransactionResponse returns the ID of the transaction that was submitted.
message SubmitTransactionResponse {
  bytes txid = 1;
}

